--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,14 @@
     </plugins>
   </build>
   
+  <repositories>
+      <!-- Repository for ORACLE JDBC Driver -->
+      <repository>
+          <id>codelds</id>
+          <url>https://code.lds.org/nexus/content/groups/main-repo</url>
+      </repository>
+  </repositories>
+  
   <dependencies>
 	<dependency>
 		<groupId>org.springframework</groupId>
@@ -110,6 +118,35 @@
 	    <groupId>org.apache.tiles</groupId>
 	    <artifactId>tiles-jsp</artifactId>
 	    <version>3.0.8</version>
+	</dependency>
+	
+	<!-- ADD -->
+	
+	<!-- Spring Security Artifacts - START -->
+      <!-- http://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
+      <dependency>
+          <groupId>org.springframework.security</groupId>
+          <artifactId>spring-security-web</artifactId>
+          <version>4.0.4.RELEASE</version>
+      </dependency>
+ 
+      <!-- http://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
+      <dependency>
+          <groupId>org.springframework.security</groupId>
+          <artifactId>spring-security-config</artifactId>
+          <version>4.0.4.RELEASE</version>
+      </dependency>
+      <dependency>
+          <groupId>javax.servlet</groupId>
+          <artifactId>javax.servlet-api</artifactId>
+          <version>3.1.0</version>
+          <scope>provided</scope>
+      </dependency> 
+       
+	<dependency>
+		<groupId>net.sourceforge.jtds</groupId>
+		<artifactId>jtds</artifactId>
+		<version>1.3.1</version>
 	</dependency>
   </dependencies>
 </project>
