--- a/src/datasource-cfg.properties
+++ b/src/datasource-cfg.properties
@@ -1,4 +1,4 @@
 ds.database-driver=com.mysql.jdbc.Driver
-ds.url=jdbc:mysql://localhost:3306/employee?useSSL=false
+ds.url=jdbc:mysql://localhost:3306/employee?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false
 ds.username=root
 ds.password=123456
