--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
   </repositories>
   
   <dependencies>
+  	<dependency>
+	  <groupId>org.slf4j</groupId>
+	  <artifactId>slf4j-simple</artifactId>
+	  <version>1.7.21</version>
+	</dependency>
 	<dependency>
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-core</artifactId>
@@ -123,6 +128,12 @@
 	<!-- ADD -->
 	
 	<!-- Spring Security Artifacts - START -->
+	
+	  <dependency>
+		  <groupId>org.springframework.security</groupId>
+		  <artifactId>spring-security-core</artifactId>
+		  <version>4.0.4.RELEASE</version>
+	  </dependency>
       <!-- http://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
       <dependency>
           <groupId>org.springframework.security</groupId>
