Adjust buildpacks on Heroku

--- a/WebContent/resources/datasource-cfg.properties
+++ b/WebContent/resources/datasource-cfg.properties
@@ -1,4 +1,7 @@
-ds.database-driver=com.mysql.jdbc.Driver
-ds.url=jdbc:mysql://localhost:3306/employee?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false
-ds.username=root
-ds.password=123456
+ds.database-driver=org.postgresql.Driver
+ds.url=${JDBC_DATABASE_URL}					
+#jdbc:postgresql://127.0.0.1:5432/employee
+ds.username=${JDBC_DATABASE_USERNAME}
+#postgres
+ds.password=${JDBC_DATABASE_PASSWORD}
+#123456
