--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,32 @@
         <version>3.2.1</version>
         <configuration>
           <warSourceDirectory>WebContent</warSourceDirectory>
+          <warName>employee</warName>
+          <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>2.3</version>
+        <executions>
+            <execution>
+                <phase>package</phase>
+                <goals>
+                    <goal>copy</goal>
+                </goals>
+                <configuration>
+                    <artifactItems>
+                        <artifactItem>
+                            <groupId>com.github.jsimone</groupId>
+                            <artifactId>webapp-runner</artifactId>
+                            <version>8.0.24.0</version>
+                            <destFileName>webapp-runner.jar</destFileName>
+                        </artifactItem>
+                    </artifactItems>
+                </configuration>
+            </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
@@ -71,18 +96,25 @@
 		<version>1.2</version>
 	</dependency>
 	
-	      <dependency>
-	          <groupId>javax.servlet.jsp</groupId>
-	          <artifactId>jsp-api</artifactId>
-	          <version>2.2</version>
-	          <scope>provided</scope>
-	      </dependency>
+    <dependency>
+        <groupId>javax.servlet.jsp</groupId>
+        <artifactId>jsp-api</artifactId>
+        <version>2.2</version>
+        <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+        <groupId>javax.servlet.jsp.jstl</groupId>
+        <artifactId>javax.servlet.jsp.jstl-api</artifactId>
+        <version>1.2.1</version>
+    </dependency>
 	
-	      <dependency>
-	          <groupId>javax.servlet.jsp.jstl</groupId>
-	          <artifactId>javax.servlet.jsp.jstl-api</artifactId>
-	          <version>1.2.1</version>
-	      </dependency>
+	<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+	<dependency>
+	    <groupId>org.postgresql</groupId>
+	    <artifactId>postgresql</artifactId>
+	    <version>42.2.6</version>
+	</dependency>
 	
 	<!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
 	<dependency>
@@ -98,12 +130,12 @@
 	    <version>8.0.13</version>
 	</dependency>
 	
-	      <!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
-	      <dependency>
-	          <groupId>org.freemarker</groupId>
-	          <artifactId>freemarker</artifactId>
-	          <version>2.3.23</version>
-	      </dependency>
+    <!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
+    <dependency>
+        <groupId>org.freemarker</groupId>
+        <artifactId>freemarker</artifactId>
+        <version>2.3.23</version>
+    </dependency>
 	
 	<!-- https://mvnrepository.com/artifact/org.apache.tiles/tiles-freemarker -->
 	<dependency>
@@ -112,11 +144,11 @@
 	    <version>3.0.8</version>
 	</dependency>
 	
-	      <dependency>
-	          <groupId>org.apache.tiles</groupId>
-	          <artifactId>tiles-extras</artifactId>
-	          <version>3.0.8</version>
-	      </dependency>
+    <dependency>
+        <groupId>org.apache.tiles</groupId>
+        <artifactId>tiles-extras</artifactId>
+        <version>3.0.8</version>
+    </dependency>
 		
 	<!-- https://mvnrepository.com/artifact/org.apache.tiles/tiles-jsp -->
 	<dependency>
@@ -129,30 +161,30 @@
 	
 	<!-- Spring Security Artifacts - START -->
 	
-	  <dependency>
-		  <groupId>org.springframework.security</groupId>
-		  <artifactId>spring-security-core</artifactId>
-		  <version>5.1.5.RELEASE</version>
-	  </dependency>
-      <!-- http://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
-      <dependency>
-          <groupId>org.springframework.security</groupId>
-          <artifactId>spring-security-web</artifactId>
-          <version>4.0.4.RELEASE</version>
-      </dependency>
- 
-      <!-- http://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
-      <dependency>
-          <groupId>org.springframework.security</groupId>
-          <artifactId>spring-security-config</artifactId>
-          <version>4.0.4.RELEASE</version>
-      </dependency>
-      <dependency>
-          <groupId>javax.servlet</groupId>
-          <artifactId>javax.servlet-api</artifactId>
-          <version>3.1.0</version>
-          <scope>provided</scope>
-      </dependency> 
+	 <dependency>
+		 <groupId>org.springframework.security</groupId>
+		 <artifactId>spring-security-core</artifactId>
+		 <version>5.1.5.RELEASE</version>
+	 </dependency>
+     <!-- http://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
+     <dependency>
+         <groupId>org.springframework.security</groupId>
+         <artifactId>spring-security-web</artifactId>
+         <version>4.0.4.RELEASE</version>
+     </dependency>
+
+     <!-- http://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
+     <dependency>
+         <groupId>org.springframework.security</groupId>
+         <artifactId>spring-security-config</artifactId>
+         <version>4.0.4.RELEASE</version>
+     </dependency>
+     <dependency>
+         <groupId>javax.servlet</groupId>
+         <artifactId>javax.servlet-api</artifactId>
+         <version>3.1.0</version>
+         <scope>provided</scope>
+     </dependency> 
        
 	<dependency>
 		<groupId>net.sourceforge.jtds</groupId>
